--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: shell
 script: echo "hello"
 before_script: echo "going to build"
 after_script: echo "build sucessfull"
+notifications:
+  slack: nexxiscarebarcotalk:PCBxwVZM8bgAAJtMEJwDrjsG
