--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ before_script: echo "going to build"
 after_script: echo "build sucessfull"
 notifications:
   slack: nexxiscarebarcotalk:PCBxwVZM8bgAAJtMEJwDrjsG
-    on_success: always  # change: send a notification when the build status changes.
-    on_failure: always  # always: always send a notification.
+  #on_success: always  # change: send a notification when the build status changes.
+   # on_failure: always  # always: always send a notification.
     #    template:
     #  - "Repo `%{repository_slug}` *%{result}* build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch `%{branch}`."
     #  - "Execution time: *%{duration}*"
