--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ after_script: echo "build sucessfull"
 notifications:
   slack: nexxiscarebarcotalk:PCBxwVZM8bgAAJtMEJwDrjsG
   on_success: always  
+  on_failure: always  
   template:
-    - "Repo `%{repository_slug}` *%{result}* build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch `%{branch}`."
+    - "Repo %{repository_slug} %{result} build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch %{branch}."
     - "Execution time: *%{duration}*"
     - "Message: %{message}"  
